[tool.poetry]
name = "epyq"
# The version variable below is set to the generic build placeholder "0.0.0".
# (In other words: leave alone!) During CI, poetry dynamic versioning
# modifies the __version__ variable in the applicable __init__.py file.
version = "0.0.0"
description = "EPyQ (EPC Service Tool)"
authors = ["alex anker <alex.anker@epcpower.com>"]
license = "GPL-2.0-or-later"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
files = ["src/epyq/__init__.py"]

[[tool.poetry.source]]
name = "epc-power"
url = "https://epc-power-us-890711758583.d.codeartifact.us-east-2.amazonaws.com/pypi/epc-power/simple"
priority = "explicit"

[[tool.poetry.source]]
name = "third-party"
url = "https://epc-power-us-890711758583.d.codeartifact.us-east-2.amazonaws.com/pypi/third-party/simple"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.7.9,<3.11"

#### EPC Repos ####
epyqlib = {path = "./sub/epyqlib",  develop = true}

#if referencing commit hashes:
sunspecdemo = { git = "https://github.com/epcpower/sunspec-demo.git", rev = "a04b466da431549946297c66364ee835c3fab3e0" }

#if referencing tags:
#sunspecdemo = {version = "0.3.0", source = "epc-power"}
###################

alqtendpy = "0.0.4"
graham = "0.1.11"
python-can = "4.0.0"
bitstruct = "6.0.0"
Twisted = "21.2.0"
qt5reactor = "0.5"
pyelftools = { git = "https://github.com/eliben/pyelftools", rev = "27941c50fef8cff8ef991419511664154c8cdf52" }
attrs = ">=19.3.0"
natsort = "5.5.0"
arrow = "0.12.1"
PyQtChart = "5.14.0"
pywin32 = { version = "223", markers = "sys_platform == 'win32'" }
certitude = { version = "1.0.1", markers = "sys_platform == 'Darwin'" }
pysunspec = "2.1.0"
pluggy = "0.12.0"
appdirs = "1.4.3"
boto3 = "1.14.41"
boto3-type-annotations = "0.3.1"
certifi = "2020.6.20"
paho-mqtt = "1.4.0"
treq = "21.1.0"
PyQt5 = "5.14.1"
requests = "2.27.1"
canmatrix = "0.9.1"
click = "7.1.2"
dunamai = "^1.19.0"

[tool.poetry.dev-dependencies]
black = "20.8b1"
gitignoreio = "0.1.5"
pyinstaller = "~=4.5"
pytest = "5.3.5"
pytest-faulthandler = "1.5.0"
pytest-rerunfailures = "5.0"
pytest-qt = "3.3.0"
pytest-twisted = "<=1.13.4"

[tool.poetry.scripts]
buildui = 'buildui:compile_ui'
epyq = 'epyq.__main__:main'
genbuildinfo = 'epyqlib.genbuildinfo:write_build_file'
autodevice = 'epyqlib.autodevice.cli:cli'

[tool.black]
target-version =  ['py37']
include = '''
(
    /download_fonts.py
    | /pinsys.py
    | /src/epyq/.*\.pyi?
    | /buildui.py
)$
'''
exclude = './.venv'

[build-system]
requires = [
    "alqtendpy",
    "setuptools",
    "wheel",
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"
