[tool.poetry]
name = "epyq"
# The version variable below is set to the generic build placeholder "0.0.0".
# (In other words: leave alone!) During CI, poetry dynamic versioning
# modifies the __version__ variable in the applicable __init__.py file.
version = "0.0.0"
description = "EPyQ (EPC Service Tool)"
authors = ["alex anker <alex.anker@epcpower.com>"]
license = "GPL-2.0-or-later"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
files = ["src/epyq/__init__.py"]

[[tool.poetry.source]]
name = "epc-power"
url = "https://epc-power-us-890711758583.d.codeartifact.us-east-2.amazonaws.com/pypi/epc-power/simple"
priority = "explicit"

[[tool.poetry.source]]
name = "third-party"
url = "https://epc-power-us-890711758583.d.codeartifact.us-east-2.amazonaws.com/pypi/third-party/simple"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

#### EPC Repos ####
epyqlib = {path = "./sub/epyqlib",  develop = true}
###################

alqtendpy = "0.0.4"
graham = "0.1.11"
python-can = "4.0.0"
bitstruct = "6.0.0"
Twisted = "21.2.0"
qt5reactor = "0.6.3"
pyelftools = { git = "https://github.com/eliben/pyelftools", rev = "27941c50fef8cff8ef991419511664154c8cdf52" }
attrs = ">=19.3.0"
natsort = "5.5.0"
arrow = "0.12.1"
PyQtChart = "5.14.0"
pywin32 = { version = "306", markers = "sys_platform == 'win32'" }
certitude = { version = "1.0.1", markers = "sys_platform == 'Darwin'" }
pysunspec = "2.1.1"
pluggy = "0.12.0"
appdirs = "1.4.3"
boto3 = "^1.26.77"
boto3-type-annotations = "0.3.1"
certifi = "2020.6.20"
paho-mqtt = "1.4.0"
treq = "21.1.0"
PyQt5 = "5.14.1"
requests = "2.27.1"
canmatrix = "0.9.1"
click = "7.1.2"

[tool.poetry.group.dev.dependencies]
black = "20.8b1"
gitignoreio = "0.1.5"
pyinstaller = "~=4.5"
pyinstaller-hooks-contrib = "2022.10" # Locks the version to avoid updating during `poetry update`
pytest = "6.2.5"
pytest-rerunfailures = "10.3"
pytest-qt = "4.0.2"
pytest-twisted = "<=1.13.4"

[tool.poetry.scripts]
buildui = 'buildui:compile_ui'
epyq = 'epyq.__main__:main'

[tool.black]
target-version =  ['py37']
include = '''
(
    /download_fonts.py
    | /pinsys.py
    | /src/epyq/.*\.pyi?
    | /buildui.py
)$
'''
exclude = './.venv'

[build-system]
requires = [
    "setuptools",
    "wheel",
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"
